feat: Add player picks grid page

--- a/lms_automation/templates/admin_dashboard.html
+++ b/lms_automation/templates/admin_dashboard.html
@@ -159,6 +159,9 @@
                     <div class="col-md-3 mb-2">
                         <button class="btn btn-success w-100" data-bs-toggle="modal" data-bs-target="#statsModal">📊 Player Statistics</button>
                     </div>
+                    <div class="col-md-3 mb-2">
+                        <a href="{{ url_for('picks_grid') }}" class="btn btn-info w-100">📋 Picks Grid</a>
+                    </div>
                 </div>
                 <div class="row mt-2">
                     <div class="col-md-3 mb-2">
