--- a/lms_automation/templates/base.html
+++ b/lms_automation/templates/base.html
@@ -24,6 +24,7 @@
             <a class="navbar-brand" href="{{ url_for('index') }}">Last Man Standing</a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                <a class="nav-link" href="{{ url_for('player_registration') }}">Join Game</a>
                 <a class="nav-link" href="{{ url_for('admin_dashboard') }}">Admin</a>
             </div>
         </div>
